--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.4.2",
+    "mdbreact": "^4.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-firebase-file-uploader": "^2.4.2",
+    "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
