--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-firebase-file-uploader": "^2.4.2",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-select": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
