--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^6.0.0",
     "firebase": "^5.4.2",
     "mdbreact": "^4.7.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-firebase-file-uploader": "^2.4.2",
