--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-google-recaptcha": "^1.0.4",
     "react-icons": "^3.1.0",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
