--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-google-recaptcha": "^1.0.4",
     "react-icons": "^3.1.0",
     "react-modal": "^3.5.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-select": "^2.0.0"
