--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mvt",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.11.1"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "server.js",
   "dependencies": {
