--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,8 @@
   "name": "mvt",
   "version": "0.1.0",
   "engines": {
-    "node": "8.11.1"
+    "node": "8.11.1",
+    "npm": "6.4.1"
   },
   "private": true,
   "proxy": "http://localhost:3001",
