--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "nodemailer": "^4.6.8"
+    "nodemailer": "^4.6.8",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
