--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": "8.11.1"
   },
+  "main": "index.js",
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
