--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "scripts": {
     "dev": "node server.js",
     "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\""
+    "start": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "build": "node scripts/build.js",
+    "seed": "node scripts/seedDB.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "installDeps": "yarn && cd client && yarn"
   },
   "repository": {
     "type": "git",
