--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
   "name": "mvt",
   "version": "1.0.0",
+  "main": "server.js",
+  "homepage": "https://github.com/bvreeman/MVT#readme",
   "engines": {
     "node": "8.11.1"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
-  "main": "server.js",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "nodemailer": "^4.6.8",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.18.4"
   },
   "scripts": {
     "dev": "node server.js",
@@ -25,6 +15,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn"
   },
+  "description": "Minnesota Valley Transport Website",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.3",
+    "nodemailer": "^4.6.8",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bvreeman/MVT.git"
@@ -33,6 +36,5 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bvreeman/MVT/issues"
-  },
-  "homepage": "https://github.com/bvreeman/MVT#readme"
+  }
 }
