--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-modal": "^3.5.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^1.1.5",
     "react-select": "^2.0.0"
   },
   "scripts": {
