--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "nodemailer": "^4.6.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-scripts": "^2.0.4"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
