--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.18.4"
-  }
+  "devDependencies": {}
 }
