--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mvt",
   "version": "1.0.0",
+  "private": true,
   "main": "server.js",
   "homepage": "https://github.com/bvreeman/MVT#readme",
   "engines": {
@@ -15,7 +16,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn"
   },
-  "description": "Minnesota Valley Transport Website",
+  "author": "Brandon Vreeman",
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.4"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -25,16 +31,11 @@
     "path": "^0.12.7",
     "react-scripts": "^2.0.4"
   },
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.18.4"
-  },
+  "description": "Minnesota Valley Transport Website",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bvreeman/MVT.git"
   },
-  "author": "Brandon Vreeman",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/bvreeman/MVT/issues"
   }
