--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "firebase": "^5.4.2",
+    "firebase-admin": "^6.0.0",
     "mdbreact": "^4.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
