trying things to fix invalid host header

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "host": "https://minnesota-valley-transport.herokuapp.com/",
   "engines": {
     "node": "8.11.1"
   },
