--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   "author": "Brandon Vreeman",
   "license": "MIT",
   "devDependencies": {
+    "aws-sdk": "^2.472.0",
     "concurrently": "^4.1.0",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.28",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "nodemailer": "^4.7.0",
     "path": "^0.12.7",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "uuid": "^3.3.2"
   },
   "description": "Minnesota Valley Transport Website",
   "repository": {
