--- a/client/package.json
+++ b/client/package.json
@@ -10,25 +10,36 @@
     "axios": "^0.19.0",
     "dotenv": "^6.2.0",
     "firebase": "^5.11.1",
-    "mdbreact": "^4.16.0",
+    "mdbreact": "^4.17.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebase-file-uploader": "^2.4.2",
     "react-google-recaptcha": "^1.0.5",
     "react-icons": "^3.7.0",
-    "react-modal": "^3.8.1",
+    "react-modal": "^3.8.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "3.0.0",
     "react-select": "^2.4.4"
   },
-  "deploy": "aws s3 sync build/ alleyransport-20190611112139-hostingbucket-sandbox",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
