--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "node server.js",
     "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "start": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\" webpack-dev-server --inline --content-base . --history-api-fallback",
     "build": "node scripts/build.js",
     "seed": "node scripts/seedDB.js",
     "test": "echo \"Error: no test specified\" && exit 1",
