--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "react-select": "^2.4.4"
   },
   "scripts": {
-    "start": "react-scripts start webpack-dev-server --inline --content-base . --history-api-fallback",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
