--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "dotenv": "^6.2.0",
-    "firebase": "^5.11.1",
+    "dotenv": "^8.0.0",
+    "firebase": "^6.2.4",
     "mdbreact": "^4.17.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -19,9 +19,9 @@
     "react-icons": "^3.7.0",
     "react-modal": "^3.8.2",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.0.0",
-    "react-select": "^2.4.4"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
