--- a/client/package.json
+++ b/client/package.json
@@ -7,17 +7,17 @@
     "node": "8.11.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.493.0",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
-    "firebase": "^6.2.4",
+    "firebase": "^6.3.0",
     "mdbreact": "^4.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebase-file-uploader": "^2.4.2",
-    "react-google-recaptcha": "^1.0.5",
     "react-icons": "^3.7.0",
-    "react-modal": "^3.8.2",
+    "react-modal": "^3.9.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
